refactor: improve GitHub Actions workflow and code structure
- Split main.py into check_updates.py and run_filter.py for better separation of concerns
- Remove hardcoded Python script from GitHub Actions workflow
- Implement RSS cache mechanism to detect updates and share data between jobs
- Add artifact upload/download steps for passing cache between jobs
- Use file-based timestamp comparison for more reliable update detection

This change makes the codebase more maintainable and the workflow more robust.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-# OpenAI API 配置
-OPENAI_API_KEY=your_openai_api_key_here
+# API 配置
+API_KEY=your_api_key_here
 MODEL_NAME=your_model_name_here
-OPENAI_BASE_URL=your_openai_base_url_here
+BASE_URL=your_base_url_here
 
 # 注意：
 # 1. 请复制此文件并重命名为 .env
