--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,33 +33,15 @@ jobs:
     
     - name: Check for updates
       id: check
-      run: |
-        python -c "
-        import feedparser
-        from datetime import datetime, timezone
-        import pytz
-        
-        def check_feed_update(feed_url):
-            feed = feedparser.parse(feed_url)
-            if not feed.entries:
-                return False
-                
-            # 获取最新的更新时间
-            latest_update = datetime(*feed.entries[0].published_parsed[:6], tzinfo=timezone.utc)
-            # 转换为本地时间
-            local_tz = pytz.timezone('Asia/Shanghai')
-            latest_update = latest_update.astimezone(local_tz)
-            
-            # 如果最新更新时间在20小时内，则认为有更新
-            now = datetime.now(local_tz)
-            hours_diff = (now - latest_update).total_seconds() / 3600
-            return hours_diff < 20
-        
-        # 检查所有RSS源
-        from config import area_interest_list
-        has_updates = any(check_feed_update(item['rss_url']) for item in area_interest_list)
-        print(f'has_updates={str(has_updates).lower()}')
-        "
+      run: python check_updates.py
+      
+    - name: Upload RSS cache
+      if: steps.check.outputs.has_updates == 'true'
+      uses: actions/upload-artifact@v4
+      with:
+        name: rss-cache
+        path: rss_cache.json
+        retention-days: 1
     
   run-filter:
     needs: check-updates
@@ -85,8 +67,14 @@ jobs:
         echo "MODEL_NAME=${{ secrets.MODEL_NAME }}" >> .env
         echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
     
+    - name: Download cache from previous job
+      uses: actions/download-artifact@v4
+      with:
+        name: rss-cache
+        path: .
+    
     - name: Run filter
-      run: python main.py
+      run: python run_filter.py
     
     - name: Generate RSS feed
       run: python generate_rss.py
